[package]
name = "microbmp"
version = "0.2.1"
authors = ["Rose <rose@lain.org.uk>"]
description = "Tiny and probably imperfect self-contained bitmap image reading library."
repository = "https://github.com/chihiro/microbmp"
keywords = ["image", "bitmap", "bmp", "microbmp"]
categories = ["multimedia::images"]
license = "MIT"

[dependencies]
